unpackaged/main/default/objects/Segmento_de_Fraccionamiento__c/Segmento_de_Fraccionamiento__c.object-meta.xml
<CustomObject>
    <label>Segmento de Fraccionamiento</label>
    <nameField>
        <displayFormat>SEG-{000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segmento de Fraccionamientos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>