unpackaged/main/default/objects/Segmento_de_Fraccionamiento__c/fields/Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion__c</fullName>
    <label>Clasificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interes Social</fullName>
                <default>true</default>
                <label>Interes Social</label>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Medio Plus</fullName>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Residencial Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>