unpackaged/main/default/objects/Segmento_de_Fraccionamiento__c/fields/m2_de_Construccion_Rango_Final__c.field-meta.xml
<CustomField>
    <fullName>m2_de_Construccion_Rango_Final__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>m2 de Construcción Rango Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>