unpackaged/main/default/objects/Segmento_de_Fraccionamiento__c/fields/Rango_de_Precio_Inical__c.field-meta.xml
<CustomField>
    <fullName>Rango_de_Precio_Inical__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Rango de Precio Inical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>